--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <div class="container">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                        <div class="row g-0 about-bg rounded overflow-hidden" style="">
+                        <div class="row g-0 about-bg overflow-hidden" style="border-radius: 50%;">
                             <div class="col-6 text-start">
                                 <img class="img-fluid w-100" src="dipto1.jpg">
                             </div>
