added some changes

--- a/testimonial.html
+++ b/testimonial.html
@@ -10,7 +10,9 @@
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -66,7 +68,7 @@
                         <div class="dropdown-menu rounded-0 m-0">
                             <a href="category.html" class="dropdown-item">Job Category</a>
                             <a href="testimonial.html" class="dropdown-item active">Testimonial</a>
-                            <a href="404.html" class="dropdown-item">404</a>
+                            
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -212,7 +214,86 @@
             </div>
         </div>
         <!-- Footer End -->
+       <!-- footer logos  -->
+       <div style="background-color: #F5F5F5; padding-top: 30px; padding: 20px;">
+        <div class="container">
+            <div class="row text-center">
+                <!-- Social Media Icons -->
+                <div class="col-12 col-md-4 mb-3">
+                    <h6>Follow Us on</h6>
+                    <div class="d-flex flex-wrap justify-content-center gap-3">
+                        <a href="#"><i class="fa-brands fa-square-facebook"
+                                style="color: #1877F2; font-size: 32px;"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin"
+                                style="color: #2867B2; font-size: 32px;"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-x-twitter"
+                                style="color: black; font-size: 32px;"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-youtube"
+                                style="color: #FF0000; font-size: 32px;"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-pinterest"
+                                style="color: #E60023; font-size: 32px;"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"
+                                style="color: black; font-size: 32px;"></i></a>
+                        <a href="#"><i class="fa-brands fa-tiktok" style="color: black; font-size: 32px;"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-reddit"
+                                style="color: #FF4500; font-size: 32px;"></i></a>
+                        <a href="#"><i class="fa-brands fa-telegram"
+                                style="color: #009EEB; font-size: 32px;"></i></a>
+                    </div>
+                </div>
+                <!-- Reviews -->
+                <div class="col-12 col-md-4 mb-3">
+                    <h6>Reviews of Dream JoBs</h6>
+                    <p
+                        style="display: flex; gap: 4px; align-items: center; justify-content: center;font-size: 18px; color: black; margin-bottom: 0;">
+                        <span style="font-weight: bold; color: black; font-size: 18px;">Excellent</span>
+                        <img class="star_img" src="/img/stars.jpg" alt="">
+                        <span style="font-weight: bold; color: black; font-size: 18px;"> 4.8</span> out of 5
+                    </p>
+                    <img style="width: 120px; height: 27px; margin-bottom: 24px;" src="/img/company/sitejabber.svg"
+                        alt="Sitejabber"> <br>
+                    <img style="width: 190px; height: 39px; object-fit: contain;"
+                        src="https://www.flexjobs.com/blobcontent/flexjobs/images/online-arating-horizontal-blue.jpg"
+                        alt="BBB Accredited">
+                </div>
+                <!-- Partner Sites -->
+                <div class="col-12 col-md-4 mb-3">
+                    <h6>Partner Sites</h6>
+                    <a href="https://remote.co/"> <img style="width: 110px; height: 21px;"
+                            src="/img/company/remote.svg" alt="Sitejabber"></a>
+                    <a href="https://www.job-hunt.org/"><img style="width: 70px; height: 35px;"
+                            src="/img/company/jobhunt.svg" alt="BBB Accredited"></a>
+                </div>
+            </div>
 
+            <!-- App Download -->
+            <div class="row text-center mt-4">
+                <div class="col-12">
+                    <h6 style="margin-bottom: 14px; font-size: 16px; color: rgb(62, 61, 63);">Get the Dream JoBs App
+                    </h6>
+                    <a href="#"><img style="height: 53px; width: 160px;" src="/img/company/app.svg"
+                            alt="App Store"></a>
+                    <a href="#"><img style="height: 53px; width: 160px;" src="/img/company/google.svg"
+                            alt="Google Play"></a>
+                </div>
+            </div>
+
+            <div style="padding: 25px 0;">
+                <div class="" style="font-size: 14px; text-align: center;">
+                    <a href="/cookie_preferences" id="manage-cookies">Manage
+                        Cookies</a>
+                    <span class="p-2">|</span>
+                    <a href="/termsOfUse.aspx" id="terms-of-use">Terms of Use</a>
+                    <span class="p-2">|</span>
+                    <a href="/PrivacyPolicy.aspx" id="privacy-policy">Privacy Policy</a>
+                    <span class="p-2">|</span>
+                    <span id="fj-copyrights" class="sc-hjsqBZ IyhqH">© 2007-2024 Dream JoBs <span>All Rights
+                            Reserved</span></span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- footer logos  -->
 
         <!-- Back to Top -->
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
