--- a/job-detail.html
+++ b/job-detail.html
@@ -97,7 +97,7 @@
             </div>
         </div>
         <!-- Header End -->
-         
+
         <!-- Job Detail Start -->
         <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
             <div class="container">
@@ -199,7 +199,7 @@
                             <h4 class="mb-4">Job Summery</h4>
                             <p><i class="fa fa-angle-right text-primary me-2"></i>Published On: 01 Jan, 2025</p>
                             <p><i class="fa fa-angle-right text-primary me-2"></i>Vacancy: 123 Position</p>
-                            <p><i class="fa fa-angle-right text-primary me-2"></i>Job Nature: Full Time</p>
+                            <p><i class="fa fa-angle-right text-primary me-2"></i>Job Nature: Full Time / Part Time</p>
                             <p><i class="fa fa-angle-right text-primary me-2"></i>Salary: $123 - $456</p>
                             <p><i class="fa fa-angle-right text-primary me-2"></i>Location: New York, USA</p>
                             <p class="m-0"><i class="fa fa-angle-right text-primary me-2"></i>Date Line: 01 Jan, 2045
