--- a/about.html
+++ b/about.html
@@ -117,11 +117,13 @@
                     </div>
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                         <h1 class="mb-4">We Help To Get The Best Job And Find A Talent</h1>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                        <p><i class="fa fa-check text-primary me-3"></i>Tempor erat elitr rebum at clita</p>
-                        <p><i class="fa fa-check text-primary me-3"></i>Aliqu diam amet diam et eos</p>
-                        <p><i class="fa fa-check text-primary me-3"></i>Clita duo justo magna dolore erat amet</p>
-                        <a class="btn btn-primary py-3 px-5 mt-3" href="">Read More</a>
+                        <p class="mb-4">Dream Jobs Agency simplifies job hunting by connecting employers and job seekers. We offer a platform to post, search, and apply for jobs across industries, ensuring a seamless experience for finding the right talent or career opportunity.
+                        </p>
+                        <p><i class="fa fa-check text-primary me-3"></i>Facilitate seamless job posting and application processes.</p>
+                        <p><i class="fa fa-check text-primary me-3"></i>Connect employers with qualified candidates.</p>
+                        <p><i class="fa fa-check text-primary me-3"></i>3. Ensure accurate and updated job listings.
+                        </p>
+                        <a class="btn btn-primary py-3 px-5 mt-3" href="/job-detail.html">Read More</a>
                     </div>
                 </div>
             </div>
