added some changes

--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
                         </p>
                         <p><i class="fa fa-check text-primary me-3"></i>Facilitate seamless job posting and application processes.</p>
                         <p><i class="fa fa-check text-primary me-3"></i>Connect employers with qualified candidates.</p>
-                        <p><i class="fa fa-check text-primary me-3"></i>3. Ensure accurate and updated job listings.
+                        <p><i class="fa fa-check text-primary me-3"></i>Ensure accurate and updated job listings.
                         </p>
                         <a class="btn btn-primary py-3 px-5 mt-3" href="/job-detail.html">Read More</a>
                     </div>
