--- a/category.html
+++ b/category.html
@@ -307,168 +307,84 @@
             </div> -->
       </div>
       <!-- Footer End -->
-      <!-- footer logos  -->
-      <div style="background-color: #f5f5f5; padding-top: 30px; padding: 20px">
-        <div class="container">
-          <div class="row text-center">
-            <!-- Social Media Icons -->
-            <div class="col-12 col-md-4 mb-3">
-              <h6>Follow Us on</h6>
-              <div class="d-flex flex-wrap justify-content-center gap-3">
-                <a href="#"
-                  ><i
-                    class="fa-brands fa-square-facebook"
-                    style="color: #1877f2; font-size: 32px"
-                  ></i
-                ></a>
-                <a href="#"
-                  ><i
-                    class="fa-brands fa-linkedin"
-                    style="color: #2867b2; font-size: 32px"
-                  ></i
-                ></a>
-                <a href="#"
-                  ><i
-                    class="fa-brands fa-square-x-twitter"
-                    style="color: black; font-size: 32px"
-                  ></i
-                ></a>
-                <a href="#"
-                  ><i
-                    class="fa-brands fa-square-youtube"
-                    style="color: #ff0000; font-size: 32px"
-                  ></i
-                ></a>
-                <a href="#"
-                  ><i
-                    class="fa-brands fa-square-pinterest"
-                    style="color: #e60023; font-size: 32px"
-                  ></i
-                ></a>
-                <a href="#"
-                  ><i
-                    class="fa-brands fa-instagram"
-                    style="color: black; font-size: 32px"
-                  ></i
-                ></a>
-                <a href="#"
-                  ><i
-                    class="fa-brands fa-tiktok"
-                    style="color: black; font-size: 32px"
-                  ></i
-                ></a>
-                <a href="#"
-                  ><i
-                    class="fa-brands fa-square-reddit"
-                    style="color: #ff4500; font-size: 32px"
-                  ></i
-                ></a>
-                <a href="#"
-                  ><i
-                    class="fa-brands fa-telegram"
-                    style="color: #009eeb; font-size: 32px"
-                  ></i
-                ></a>
+        <!-- footer logos  -->
+        <div style="background-color: #F5F5F5; padding-top: 30px; padding: 20px;">
+          <div class="container">
+              <div class="row text-center">
+                  <!-- Social Media Icons -->
+                  <div class="col-12 col-md-4 mb-3">
+                      <h6>Follow Us on</h6>
+                      <div class="d-flex flex-wrap justify-content-center gap-3">
+                          <a href="#"><i class="fa-brands fa-square-facebook"
+                                  style="color: #1877F2; font-size: 32px;"></i></a>
+                          <a href="#"><i class="fa-brands fa-linkedin"
+                                  style="color: #2867B2; font-size: 32px;"></i></a>
+                          <a href="#"><i class="fa-brands fa-square-x-twitter"
+                                  style="color: black; font-size: 32px;"></i></a>
+                          <a href="#"><i class="fa-brands fa-square-youtube"
+                                  style="color: #FF0000; font-size: 32px;"></i></a>
+                          <a href="#"><i class="fa-brands fa-square-pinterest"
+                                  style="color: #E60023; font-size: 32px;"></i></a>
+                          <a href="#"><i class="fa-brands fa-instagram"
+                                  style="color: black; font-size: 32px;"></i></a>
+                          <a href="#"><i class="fa-brands fa-tiktok" style="color: black; font-size: 32px;"></i></a>
+                          <a href="#"><i class="fa-brands fa-square-reddit"
+                                  style="color: #FF4500; font-size: 32px;"></i></a>
+                          <a href="#"><i class="fa-brands fa-telegram"
+                                  style="color: #009EEB; font-size: 32px;"></i></a>
+                      </div>
+                  </div>
+                  <!-- Reviews -->
+                  <div class="col-12 col-md-4 mb-3">
+                      <h6>Reviews of Dream JoBs</h6>
+                      <p
+                          style="display: flex; gap: 4px; align-items: center; justify-content: center;font-size: 18px; color: black; margin-bottom: 0;">
+                          <span style="font-weight: bold; color: black; font-size: 18px;">Excellent</span>
+                          <img class="star_img" src="https://savingzone.top/dreamJobs/img/stars.jpg" alt="">
+                          <span style="font-weight: bold; color: black; font-size: 18px;"> 4.8</span> out of 5
+                      </p>
+                      <img style="width: 120px; height: 27px; margin-bottom: 24px;" src="https://savingzone.top/dreamJobs/img/company/sitejabber.svg"
+                          alt="Sitejabber"> <br>
+                      <img style="width: 190px; height: 39px; object-fit: contain;"
+                          src="https://www.flexjobs.com/blobcontent/flexjobs/images/online-arating-horizontal-blue.jpg"
+                          alt="BBB Accredited">
+                  </div>
+                  <!-- Partner Sites -->
+                  <div class="col-12 col-md-4 mb-3">
+                      <h6>Partner Sites</h6>
+                      <a href="https://remote.co/"> <img style="width: 110px; height: 21px;"
+                              src="https://savingzone.top/dreamJobs/img/company/remote.svg" alt="Sitejabber"></a>
+                      <a href="https://www.job-hunt.org/"><img style="width: 70px; height: 35px;"
+                              src="https://savingzone.top/dreamJobs/img/company/jobhunt.svg" alt="BBB Accredited"></a>
+                  </div>
               </div>
-            </div>
-            <!-- Reviews -->
-            <div class="col-12 col-md-4 mb-3">
-              <h6>Reviews of Dream JoBs</h6>
-              <p
-                style="
-                  display: flex;
-                  gap: 4px;
-                  align-items: center;
-                  justify-content: center;
-                  font-size: 18px;
-                  color: black;
-                  margin-bottom: 0;
-                "
-              >
-                <span style="font-weight: bold; color: black; font-size: 18px"
-                  >Excellent</span
-                >
-                <img class="star_img" src="/img/stars.jpg" alt="" />
-                <span style="font-weight: bold; color: black; font-size: 18px">
-                  4.8</span
-                >
-                out of 5
-              </p>
-              <img
-                style="width: 120px; height: 27px; margin-bottom: 24px"
-                src="/img/company/sitejabber.svg"
-                alt="Sitejabber"
-              />
-              <br />
-              <img
-                style="width: 190px; height: 39px; object-fit: contain"
-                src="https://www.flexjobs.com/blobcontent/flexjobs/images/online-arating-horizontal-blue.jpg"
-                alt="BBB Accredited"
-              />
-            </div>
-            <!-- Partner Sites -->
-            <div class="col-12 col-md-4 mb-3">
-              <h6>Partner Sites</h6>
-              <a href="https://remote.co/">
-                <img
-                  style="width: 110px; height: 21px"
-                  src="/img/company/remote.svg"
-                  alt="Sitejabber"
-              /></a>
-              <a href="https://www.job-hunt.org/"
-                ><img
-                  style="width: 70px; height: 35px"
-                  src="/img/company/jobhunt.svg"
-                  alt="BBB Accredited"
-              /></a>
-            </div>
-          </div>
 
-          <!-- App Download -->
-          <div class="row text-center mt-4">
-            <div class="col-12">
-              <h6
-                style="
-                  margin-bottom: 14px;
-                  font-size: 16px;
-                  color: rgb(62, 61, 63);
-                "
-              >
-                Get the Dream JoBs App
-              </h6>
-              <a href="#"
-                ><img
-                  style="height: 53px; width: 160px"
-                  src="/img/company/app.svg"
-                  alt="App Store"
-              /></a>
-              <a href="#"
-                ><img
-                  style="height: 53px; width: 160px"
-                  src="/img/company/google.svg"
-                  alt="Google Play"
-              /></a>
-            </div>
-          </div>
+              <!-- App Download -->
+              <div class="row text-center mt-4">
+                  <div class="col-12">
+                      <h6 style="margin-bottom: 14px; font-size: 16px; color: rgb(62, 61, 63);">Get the Dream JoBs App
+                      </h6>
+                      <a href="#"><img style="height: 53px; width: 160px;" src="https://savingzone.top/dreamJobs/img/company/app.svg"
+                              alt="App Store"></a>
+                      <a href="#"><img style="height: 53px; width: 160px;" src="https://savingzone.top/dreamJobs/img/company/google.svg"
+                              alt="Google Play"></a>
+                  </div>
+              </div>
 
-          <div style="padding: 25px 0">
-            <div class="" style="font-size: 14px; text-align: center">
-              <a href="/cookie_preferences" id="manage-cookies"
-                >Manage Cookies</a
-              >
-              <span class="p-2">|</span>
-              <a href="/termsOfUse.aspx" id="terms-of-use">Terms of Use</a>
-              <span class="p-2">|</span>
-              <a href="/PrivacyPolicy.aspx" id="privacy-policy"
-                >Privacy Policy</a
-              >
-              <span class="p-2">|</span>
-              <span id="fj-copyrights" class="sc-hjsqBZ IyhqH"
-                >© 2007-2024 Dream JoBs <span>All Rights Reserved</span></span
-              >
-            </div>
+              <div style="padding: 25px 0;">
+                  <div class="" style="font-size: 14px; text-align: center;">
+                      <a href="/cookie_preferences" id="manage-cookies">Manage
+                          Cookies</a>
+                      <span class="p-2">|</span>
+                      <a href="/termsOfUse.aspx" id="terms-of-use">Terms of Use</a>
+                      <span class="p-2">|</span>
+                      <a href="/PrivacyPolicy.aspx" id="privacy-policy">Privacy Policy</a>
+                      <span class="p-2">|</span>
+                      <span id="fj-copyrights" class="sc-hjsqBZ IyhqH">© 2007-2024 Dream JoBs <span>All Rights
+                              Reserved</span></span>
+                  </div>
+              </div>
           </div>
-        </div>
       </div>
       <!-- footer logos  -->
 
