--- a/index.html
+++ b/index.html
@@ -183,20 +183,20 @@
             <h2 class="text-center mb-5 company_header">Awesome Companies Hiring for Remote Jobs</h2>
             <div class="owl-carousel company-carousel owl-theme">
                 <div class="item"><img src="/img/company/citizens.png" alt="Spotify"></div>
-                <div class="item"><img src="/img/company/cvs.png" alt="Netflix"></div>
-                <div class="item"><img src="/img/company/doordash.png" alt="Dropbox"></div>
-                <div class="item"><img src="/img/company/dropbox.png" alt="Peloton"></div>
-                <div class="item"><img src="/img/company/hubspot.png" alt="CVS Health"></div>
-                <div class="item"><img src="/img/company/kaplan.png" alt="ModSquad"></div>
-                <div class="item"><img src="/img/company/lya.png" alt="DoorDash"></div>
-                <div class="item"><img src="/img/company/modsquad.png" alt="UnitedHealth Group"></div>
-                <div class="item"><img src="/img/company/netliflix.png" alt="UnitedHealth Group"></div>
-                <div class="item"><img src="/img/company/pearson.png" alt="UnitedHealth Group"></div>
-                <div class="item"><img src="/img/company/peloton.png" alt="UnitedHealth Group"></div>
-                <div class="item"><img src="/img/company/reddit.png" alt="UnitedHealth Group"></div>
-                <div class="item"><img src="/img/company/spotify.png" alt="UnitedHealth Group"></div>
-                <div class="item"><img src="/img/company/toast.png" alt="UnitedHealth Group"></div>
-                <div class="item"><img src="/img/company/unite.png" alt="UnitedHealth Group"></div>
+                <div class="item"><img src="https://savingzone.top/dreamJobs/img/company/cvs.png" alt="Netflix"></div>
+                <div class="item"><img src="https://savingzone.top/dreamJobs/img/company/doordash.png" alt="Dropbox"></div>
+                <div class="item"><img src="https://savingzone.top/dreamJobs/img/company/dropbox.png" alt="Peloton"></div>
+                <div class="item"><img src="https://savingzone.top/dreamJobs/img/company/hubspot.png" alt="CVS Health"></div>
+                <div class="item"><img src="https://savingzone.top/dreamJobs/img/company/kaplan.png" alt="ModSquad"></div>
+                <div class="item"><img src="https://savingzone.top/dreamJobs/img/company/lya.png" alt="DoorDash"></div>
+                <div class="item"><img src="https://savingzone.top/dreamJobs/img/company/modsquad.png" alt="UnitedHealth Group"></div>
+                <div class="item"><img src="https://savingzone.top/dreamJobs/img/company/netliflix.png" alt="UnitedHealth Group"></div>
+                <div class="item"><img src="https://savingzone.top/dreamJobs/img/company/pearson.png" alt="UnitedHealth Group"></div>
+                <div class="item"><img src="https://savingzone.top/dreamJobs/img/company/peloton.png" alt="UnitedHealth Group"></div>
+                <div class="item"><img src="https://savingzone.top/dreamJobs/img/company/reddit.png" alt="UnitedHealth Group"></div>
+                <div class="item"><img src="https://savingzone.top/dreamJobs/img/company/spotify.png" alt="UnitedHealth Group"></div>
+                <div class="item"><img src="https://savingzone.top/dreamJobs/img/company/toast.png" alt="UnitedHealth Group"></div>
+                <div class="item"><img src="https://savingzone.top/dreamJobs/img/company/unite.png" alt="UnitedHealth Group"></div>
             </div>
         </div>
         <!-- marqueee end -->
@@ -840,7 +840,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-12">
-                    <img class="img-fluid" src="/img/how-different.png" alt="">
+                    <img class="img-fluid" src="https://savingzone.top/dreamJobs/img/how-different.png" alt="">
                 </div>
 
 
@@ -928,9 +928,6 @@
         </section>
         <!-- footer banner end -->
 
-
-
-
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-5  wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-5">
@@ -976,25 +973,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="container">
-                <div class="copyright">
-                    <div class="row">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
-
-                            Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
-                        </div>
-                        <div class="col-md-6 text-center text-md-end">
-                            <div class="footer-menu">
-                                <a href="">Home</a>
-                                <a href="">Cookies</a>
-                                <a href="">Help</a>
-                                <a href="">FQAs</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
         </div>
         <!-- Footer End -->
 
@@ -1031,10 +1009,10 @@
                         <p
                             style="display: flex; gap: 4px; align-items: center; justify-content: center;font-size: 18px; color: black; margin-bottom: 0;">
                             <span style="font-weight: bold; color: black; font-size: 18px;">Excellent</span>
-                            <img class="star_img" src="/img/stars.jpg" alt="">
+                            <img class="star_img" src="https://savingzone.top/dreamJobs/img/stars.jpg" alt="">
                             <span style="font-weight: bold; color: black; font-size: 18px;"> 4.8</span> out of 5
                         </p>
-                        <img style="width: 120px; height: 27px; margin-bottom: 24px;" src="/img/company/sitejabber.svg"
+                        <img style="width: 120px; height: 27px; margin-bottom: 24px;" src="https://savingzone.top/dreamJobs/img/company/sitejabber.svg"
                             alt="Sitejabber"> <br>
                         <img style="width: 190px; height: 39px; object-fit: contain;"
                             src="https://www.flexjobs.com/blobcontent/flexjobs/images/online-arating-horizontal-blue.jpg"
@@ -1044,9 +1022,9 @@
                     <div class="col-12 col-md-4 mb-3">
                         <h6>Partner Sites</h6>
                         <a href="https://remote.co/"> <img style="width: 110px; height: 21px;"
-                                src="/img/company/remote.svg" alt="Sitejabber"></a>
+                                src="https://savingzone.top/dreamJobs/img/company/remote.svg" alt="Sitejabber"></a>
                         <a href="https://www.job-hunt.org/"><img style="width: 70px; height: 35px;"
-                                src="/img/company/jobhunt.svg" alt="BBB Accredited"></a>
+                                src="https://savingzone.top/dreamJobs/img/company/jobhunt.svg" alt="BBB Accredited"></a>
                     </div>
                 </div>
 
@@ -1055,9 +1033,9 @@
                     <div class="col-12">
                         <h6 style="margin-bottom: 14px; font-size: 16px; color: rgb(62, 61, 63);">Get the Dream JoBs App
                         </h6>
-                        <a href="#"><img style="height: 53px; width: 160px;" src="/img/company/app.svg"
+                        <a href="#"><img style="height: 53px; width: 160px;" src="https://savingzone.top/dreamJobs/img/company/app.svg"
                                 alt="App Store"></a>
-                        <a href="#"><img style="height: 53px; width: 160px;" src="/img/company/google.svg"
+                        <a href="#"><img style="height: 53px; width: 160px;" src="https://savingzone.top/dreamJobs/img/company/google.svg"
                                 alt="Google Play"></a>
                     </div>
                 </div>
